.metadata/.plugins/org.eclipse.cdt.ui/UD_ADC.build.log
22:22:34 **** Incremental Build of configuration Debug for project UD_ADC ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/LSM303DLHC.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/LSM303DLHC.d" -MT"Core/Src/LSM303DLHC.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/LSM303DLHC.o"
../Core/Src/LSM303DLHC.c:12:25: error: unknown type name 'I2C_HandleTypeDef'; did you mean 'DMA_HandleTypeDef'?
   12 | void lsm303dlhc_init_la(I2C_HandleTypeDef *i2c) {
      |                         ^~~~~~~~~~~~~~~~~
      |                         DMA_HandleTypeDef
make: *** [Core/Src/subdir.mk:49: Core/Src/LSM303DLHC.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

22:22:35 Build Failed. 2 errors, 0 warnings. (took 961ms)

